js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-with-import-source-no-rest-param.js
DONOTEVALUATE
(
)
;
with
(
{
}
)
{
import
.
source
(
.
.
.
[
'
<
module
source
>
'
]
)
;
}
